# Aeon3D

./: .gitignore  gedit.ini  readme.md
GDemo/: App.c  App.h  AutoSelect.c  AutoSelect.h  Cache.c  Cache.h  Cam.c  Cam.h  GameMgr.c  Gui.c  ModelTrigger.h  ObjMgr.h  TimeEdit.c  Trigger.c  VidMode.h  door.c  door.h  gutil.c  physics.h
GDemo/DrvMenu/: Drvlist.h  genvs.aps  genvs.rc  resrc1.h
GDemo/Effect/: Effect.h  EffectC.c  Particle.c  Particle.h
GDemo/Effect/Manager/: ActorSettingsM.h  AmbientSoundM.h  ChaosM.c  ColorCycleM.c  ColorCycleM.h  CoronaM.c  CoronaM.h  ExplosionM.h  FlipBookM.h  FloatingParticlesM.c  FloatingParticlesM.h  InvisibleM.c  InvisibleM.h  LightM.c  LightStyleM.c  LightStyleM.h  MorphM.h  ProceduralM.c  RainM.c  RainM.h  RedWispM.c  ScrollM.c  ScrollM.h  SpoutM.c
GDemo/Effect/Procedurals/: ElectricFx.h  proceng.c  proceng.h
GDemo/Util/: ActorPool.c  ActorPool.h  DList.c  Debug.h  SPool.c  SPool.h  TPool.c  TPool.h
GTest/: AutoSelect.c  Buffer.h  CMakeLists.txt  GameMgr.c  HOST.H  NetMgr.c  Text.c  modelist.c
GTest/DrvMenu/: DrvList.h
GTest/FX/: DynLight.c  Fx.c  ModelCtl.c
GTest/Game/: GMain.h  Genvs.h  Gplayer.h  Items.c  PathPt.c  Track.c  _bot.c  _bot.h  track.h
GTest/Procedurals/: ElectricFx.c  gebmutil.c
GTest/Unused/: cd.c
OpenSource/: .clang-format  .gitignore  CMakeLists.txt  license  readme.md
OpenSource/GDemo/: CameraPathDlg.c  CameraPathDlg.h  Fade.c  Fade.h  GameMgr.h  Gui.h  ModeList.h  ModelTrigger.c  Mouse.c  Mouse.h  ObjMgr.c  PathPoint.c  PathPoint.h  TimeEdit.h  Trigger.h  VidMode.c  ctypes.h  cursor.c  cursor.h  gdemo.c  gutil.h  modelist.c  physics.c  wmuser.h
OpenSource/GDemo/DrvMenu/: Drvlist.c  genvs.RES
OpenSource/GDemo/Effect/: Effect.c  EffectC.h  EffectI.h  EffectM.c  EffectM.h  EffectMI.h
OpenSource/GDemo/Effect/Manager/: ActorSettingsM.c  AmbientSoundM.c  ChaosM.h  ElectricM.c  ElectricM.h  ExplosionM.c  FlipBookM.c  LightM.h  MorphM.c  ProceduralM.h  RedWispM.h  SpoutM.h
OpenSource/GDemo/Effect/Procedurals/: ElectricFx.c  Flow.c  Flow.h  procedural.h  proceng_tables.c
OpenSource/GDemo/Effect/Single/: Bolt.c  Bolt.h  Corona.h  Glow.c  Glow.h  ProceduralTexture.c  ProceduralTexture.h  Snd.c  Snd.h  Spray.h  Sprite.c  Sprite.h
OpenSource/GDemo/FX/: DynLight.c  GPcorona.c  ModelCtl.c
OpenSource/GDemo/Util/: BitmapUtil.c  BitmapUtil.h  DList.h  Debug.c  IndexList.c
OpenSource/GTest/: AutoSelect.c  Buffer.c  Buffer.h  CLIENT.H  CMakeLists.txt  Client.c  Console.c  GMenu.c  GMenu.h  GameMgr.c  Gamemgr.h  Genvs.c  Host.c  Menu.c  Server.c  Server.h  cd.H  cd.c
OpenSource/GTest/DrvMenu/: DrvList.c
OpenSource/GTest/FX/: Fx.h  corona.c  electric.c
OpenSource/GTest/Game/: Attacker.c  GMain.c  Game.h  Genvs.h  Genvsi.c  Genvsi.h  Level.c  PathPt.c  Weapons.c  _bot.c  bot.c  bot.h
OpenSource/GTest/Procedurals/: ElectricFx.c  Water.c  bumpmap.c  gebmutil.c  particles.c  plasma.c  proceng.c  procutil.h
OpenSource/Public/Core/: System.h
OpenSource/Source/: CAMERA.C  CMakeLists.txt  CSNetMgr.c  CSNetMgr.h  Camera.c  GENESIS.H  Ge.c  NETPLAY.C  NETPLAY.H  PTRTYPES.H  Sound3d.c  getypes.h  list.c  list.h  sound.c  tclip.h
OpenSource/Source/Actor/: actor.c  actor.h  body.c  bodyinst.h  motion.c  motion.h  path.c  path.h  pose.c  puppet.c  puppet.h  tkarray.c  tkevents.h  vkframe.c
OpenSource/Source/Bitmap/: bitmap._h  bitmap.c  bitmap.h  bitmap_blitdata.c  bitmap_gamma.c
OpenSource/Source/Bitmap/Compression/: palcreate.c  palettize.c  palettize.h  paloptimize.h  utility.h  yuv.h
OpenSource/Source/Engine/: BitmapList.c  BitmapList.h  System.c  System.h  engine.c  engine.h
OpenSource/Source/Engine/Drivers/: Dcommon.h
OpenSource/Source/Engine/Drivers/D3DDrv/: CMakeLists.txt  D3D_ERR.CPP  Render.cpp  Scene.cpp  tpage.cpp
OpenSource/Source/Engine/Drivers/GLDrv/: CMakeLists.txt  GLIDEDRV.H  GMain.c  GMain.h  GTHandle.h  GThandle.c  GlideDrv.c  Render.c  Render.h
OpenSource/Source/Engine/Drivers/GlideDrv/: CMakeLists.txt
OpenSource/Source/Engine/Drivers/SoftDrv/: SYSTEM.H
OpenSource/Source/Engine/Logo/: electric.c  logo.c
OpenSource/Source/Entities/: ENTITIES.H  Entities.c
OpenSource/Source/Font/: font.c  wgClip.c
OpenSource/Source/Math/: ExtBox.c  ExtBox.h  VEC3D.C  Xform3d.c  crc32.h  quatern.c
OpenSource/Source/Physics/: PhysicsSystem.c
OpenSource/Source/Support/: BASETYPE.H  ERRORLOG.C  Errorlog.h  RAM.C  RAM.H  geAssert.c  log.c
OpenSource/Source/VFile/: FSMEMORY.C  FSMEMORY.c  dirtree.c  fsdos.c  fsvfs.c  vfile.c  vfile.h
OpenSource/Source/World/: FRUSTUM.H  Fog.c  Fog.h  Frustum.c  GBSPFILE.H  Gbspfile.c  LIGHT.H  Light.c  PLANE.H  Plane.c  SURFACE.H  Surface.c  TRACE.H  Trace.c  USER.H  User.c  VIS.H  Vis.c  WORLD.H  World.c
OpenSource/Tools/GBSPCmd/: GBSPCmd.cpp
OpenSource/Tools/GBSPLib/: BRUSH2.H  BSP.CPP  BSP.H  Bsp2.cpp  CMakeLists.txt  Fill.Cpp  GBSPFILE.CPP  GBSPFILE.H  GBSPPREP.CPP  GBSPPREP.H  Gbsplib.cpp  Gbsplib.h  LIGHT.CPP  LIGHT.H  MAP.CPP  MAP.H  MATHLIB.H  POLY.H  PORTALS.CPP  PORTALS.H  TEXTURE.H  Utils.h  VIS.CPP  VIS.H
Source/: CMakeLists.txt  Camera.h  NETPLAY.C  SOUND3D.H  Tclip.c  getypes.h  sound.c  timer.c
Source/Actor/: QKFrame.c  QKFrame.h  actor.h  body._h  body.c  body.h  path.c  pose.h  strblock.c  strblock.h  tkarray.h  tkevents.c  vkframe.h  xfarray.h
Source/Bitmap/: bitmap.c  pixelformat.h
Source/Engine/: BitmapList.c  System.h
Source/Engine/Drivers/GlideDrv/: CMakeLists.txt  GCache.c  Render.c
Source/Engine/Drivers/GlideDrv/Glide2x/Src/Include/: 3DFX.H
Source/Entities/: Entities.c
Source/Font/: wgClip.H
Source/Physics/: PhysicsObject.c
Source/Support/: RAM.C  RAM.H  log.h  mempool.c
Source/VFile/: dirtree.c  fsdos.c
Source/World/: Fog.c  Gbspfile.c  LIGHT.H  Plane.c  Surface.c  Trace.c  USER.H  Vis.c  WBitmap.c  WBitmap.h  WORLD.H  World.c
Tools/Fusion2/: RCa16696
Tools/GBSPCmd/: CMakeLists.txt
Tools/GBSPLib/: BSP.CPP  Brush2.cpp  Fill.Cpp  Fill.h  GBSPFILE.CPP  GBSPFILE.H  Gbsplib.cpp  LIGHT.CPP  Leaf.cpp  Leaf.h  POLY.CPP  PORTALS.H  RAD.CPP  TEXTURE.H  Utils.cpp  VISFLOOD.CPP
(+20 files in other folders)
